# roigbiv

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  app.py  environment.yml  pipeline_algorithm_breakdown.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
configs/: pipeline.yaml
diagnostics/regression/: 01_repo_audit.md  02_model_inventory.md  03_data_inventory.md  04_pipeline_code_analysis.md  05_problem_fovs.md  06_diagnostic_results.md  07_root_cause_determination.md  08_remediation_plan.md  09_validation_results.md  10_regression_postmortem.md
diagnostics/regression/followup/: A1_reference_labels.tif  A2_summary.md  A_findings.md  run_A0.py  run_A1.py  run_A2.py
docs/: ASTROCYTE_PLAN.md  CHANGELOG.md  RESEARCHER_DATA_GUIDE.md  cellpose_guide.docx  email-notifications.md  external-editing.md  novelty_analysis.md  pipeline_algorithm_breakdown.md  review-page-data-flow.md  roi-pipeline-specification.md  roigbiv_guide.docx  roigbiv_suite2p_supplement.docx  visualizer-plan.md
docs/design/: roicat-integration.md
docs/legacy/legacy_mc/: 2P_preprocessing_v1.ipynb  write_hdf5_from_tif3 - Py2_Mike_allinone.ipynb
docs/publication/: algorithms.md
docs/validation/: three-session-test.md  three_session_transcript.json
models/deployed/: current_model
notebooks/: roigbiv.ipynb
roigbiv/: __init__.py  _config.py  classify.py  cli.py  cli_registry.py  cli_reingest.py  curator.py  io.py  match.py  merge.py  napari_viewer.py  overlay.py  suite2p.py  tonic.py  traces.py  union.py  viz.py
roigbiv/pipeline/: __init__.py  _email.py  batch.py  classify.py  corrections.py  cross_session_viewer.py  deconvolution.py  dff.py  foundation.py  gate1.py  gate2.py  gate3.py  gate4.py  hitl.py  loaders.py  napari_viewer.py  outputs.py  overlap_correction.py  qc_features.py  reextract.py  reingest.py  resume.py  run.py  stage1.py  stage2.py  stage3.py  stage3_templates.py  stage4.py  subtraction.py  traces.py  traces_io.py  types.py  workspace.py
roigbiv/registry/: __init__.py  alembic.ini  backfill.py  calibration.py  config.py  dedupe.py  filename.py  fingerprint.py  match.py  migrate.py  models.py  orchestrator.py  roicat_adapter.py
roigbiv/tests/: test_overlay.py
roigbiv/ui/: __init__.py  __main__.py  app.py  logging.py
scripts/: build_union_rois.py  classify_rois.py  compare_models.py  config.py  detect_tonic.py  diagnostic_compare.py  eval_model.py  extract_traces.py  extract_vcorr.py  ingest_corrections.py  match_rois.py  merge_rois.py  process_external_data.py  roigbiv_to_pynapse.py  run_inference.py  run_suite2p.py  score_suite2p_rois.py  sort_trap_data.py  train.py  validate_dataset.py  verify_email_smoke.py  view_scored_rois.py
scripts/archive/: convert_rois.py  evaluate_consensus.py  ingest_corrections.py  make_projections.py  prepare_training_consensus.py  prepare_training_data.py  run_joint_pipeline.py  s2p_to_masks.py  validate_dataset.py
scripts/validation/: three_session_run.py
(+80 files in other folders)
