[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roigbiv"
version = "0.1.10"
description = "Consensus cell detection pipeline for two-photon calcium imaging (Suite2p + Cellpose)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["neuroscience", "calcium imaging", "cell detection", "Suite2p", "Cellpose"]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "tifffile",
    "scikit-image",
    "scikit-learn",
    "opencv-python",
    "matplotlib",
    "ipywidgets",
    "pyyaml",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
]
# suite2p and cellpose are NOT listed here — they must be installed with specific
# ordering in the notebook (suite2p first, then cellpose<4.0.0 --upgrade) to
# avoid dependency pin conflicts.

[project.optional-dependencies]
# `ui` is the primary frontend — a Dash + Plotly web app with native ROI
# drawing, cross-session coordinated colors, and integrated registry ops.
ui = ["dash>=2.17", "dash-bootstrap-components>=1.5", "plotly>=5.22"]
# `app` is the legacy Streamlit entry point — superseded by `ui`; kept
# only so a `pip install roigbiv[app]` on an older environment still works.
app = ["streamlit"]
viewer = ["napari[all]>=0.4.19"]
dev = ["build", "pytest"]
postgres = ["psycopg[binary]>=3.1"]
# `embeddings` pulls in ROICaT's ROInet (SimCLR-trained ConvNeXt) for the
# cross-session FOV/cell matcher. Optional because the pipeline degrades to
# the legacy phase-correlation path when roicat is missing.
embeddings = ["roicat>=1.5", "torch>=2.0", "torchvision"]

[project.scripts]
roigbiv-pipeline = "roigbiv.pipeline.run:main"
roigbiv-cli = "roigbiv.cli:main"
roigbiv-registry = "roigbiv.cli_registry:main"
roigbiv-ui = "roigbiv.ui.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["roigbiv*"]

[tool.setuptools.package-data]
roigbiv = ["py.typed"]
